--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "senna-bot",
-  "description": "Customizable WhatsApp Bot",
-  "repository": "https://github.com/FG98F/senna-bot",
+  "name": "JyHyun",
+  "description": "La Bot Más Linda Que Tu Ex",
+  "repository": "https://github.com/JoseXrl15k/JyHyun",
   "logo": "https://i.ibb.co/dG6rm49/fg-logo.png",
-  "keywords": ["bot", "whatsapp", "whatsapp-bot", "senna", "senna bot", "dylux-bot"]
+  "keywords": ["bot", "whatsapp", "whatsapp-bot", "JyHyun", "Jy Hyun Bot", "Jy Hyun MultiDevice"]
 }
