--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "Sylphiette",
         "baileys-md"
     ],
-    "homepage": "https://github.com/FG98F/senna-bot",
+    "homepage": "https://github.com/JoseXrl15k/JyHyun",
     "author": {
-        "name": "FG98F"
+        "name": "JoseXrl15k"
     },
     "repository": {
         "type": "git",
